compiler/w_session/tests/errors/let-big-constant.stderr
tests/errors/let-big-constant.w:2:12: error: type mismatch
    let a: i32 = 2147483648;
           ^^^
